--- a/module2-solution/css/module2.css
+++ b/module2-solution/css/module2.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
     margin-bottom: 15px;
@@ -11,6 +12,37 @@ div {
     border: 1px solid black;
     margin-bottom: 15px;
     float: left;
+    background-color: lightgray;
+}
+#p1 {
+    position: relative;
+    top: 0;
+    left: 80%;
+    width: 20%;
+    background-color: pink;
+    padding: 5px;
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
+}
+#p2 {
+    position: relative;
+    top: 0;
+    left: 80%;
+    width: 20%;
+    background-color: red;
+    padding: 5px;
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
+}
+#p3 {
+    position: relative;
+    top: 0;
+    left: 80%;
+    width: 20%;
+    background-color: tan;
+    padding: 5px;
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
 }
 @media (min-width: 992px) {
     .col-lg-3 {
