--- a/module2-solution/css/module2.css
+++ b/module2-solution/css/module2.css
@@ -5,23 +5,13 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
-    margin-bottom: 15px;
+    margin: 15px;
     text-align: center;
 }
-div {
+.container {
     border: 1px solid black;
-    margin-bottom: 15px;
-    float: left;
     background-color: lightgray;
-}
-.title {
-    position: relative;
-    top: 0;
-    left: 80%;
-    width: 20%;
-    padding: 5px;
-    border-left: 1px solid black;
-    border-bottom: 1px solid black;
+    margin: 15px;
 }
 #p1 {
     background-color: pink;
@@ -32,21 +22,39 @@ div {
 #p3 {
     background-color: tan;
 }
+.title {
+    position: relative;
+    top: 0;
+    left: 80%;
+    width: 20%;
+    padding: 5px;
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
+    text-align: center;
+}
+.title + p {
+    padding: 10px;
+    text-align: left;
+}
 @media (min-width: 992px) {
     .col-lg-3 {
+        float: left;
         width: 33.33%;
     }
 }
 @media (min-width: 768px) and (max-width: 991px) {
     .col-md-2 {
+        float: left;
         width: 50%;
     }
     .col-md-1 {
+        float: left;
         width: 100%;
     }
 }
 @media (max-width: 767px) {
     .col-sm-1 {
+        float: left;
         width: 100%;
     }
 }
